Added various CSS and feedback improvements

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
   <title>Battleship</title>
+
+  <link rel="stylesheet" type="text/css" href="style.css">  
 </head>
 
 <body>
@@ -20,9 +22,9 @@
 
   <button type="button" class="btn btn-primary" onclick="runCode()">Start</button>
 
-  
+
   <!-- Putting the external src in the body so the contents load before the js is good practice -->
-  <script src="Script.js"></script>
+  <script src="script.js"></script>
 
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
